welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: ';' expected but 'def' found.
gauche();avance();avance();droite();} def marque() {poseBrosse();leveBrosse();}
                                      ^PictureMono:5: error: ';' expected but 'def' found.
 def fairev() {gauche();avance();marque();recule();droite();avance();marque();avance();gauche();avance();marque();recule()droite();}
 ^PictureMono:8: error: Unmatched closing brace '}' ignored here
}
^